--- a/rwd-demo.html
+++ b/rwd-demo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My First Web Page</title>
 
 <link rel="stylesheet" href="demo.css">
@@ -26,9 +27,9 @@
       <h1>My First Heading</h1>
       <p>My first paragraph.</p>
     </div>
-      <div class="card"> 
-        <img src="images/east-village.jpg" alt="East Village" width="400">
-      </div>
+    <div class="card"> 
+      <img src="images/east-village.jpg" alt="East Village" width="400">
+    </div>
   </div>
 </main>
 
